# zombiee

./: .gitattributes  .gitignore  Blog.md  Dockerfile  Dockerfile.dgx  Dockerfile.dgx.kaggle  README.md  openenv.yaml  pyproject.toml
.claude/: CONTEXT.md  settings.local.json
.github/workflows/: hf-space-keepalive.yml
.planning2/: 00_PLAN.md  01_OPENENV_PATTERNS.md  02_REWARD_DESIGN.md  03_TRAINING_SETUP.md  04_DEMO_AND_SUBMISSION.md  05_TRAINING_ISSUES_AND_FIXES.md  06_V1_FINAL_STATE.md  07_V2_DESIGN_AND_IMPL.md  08_REPO_LAYOUT.md  09_V1_VS_V2_COMPARISON.md  README.md
docs/superpowers/plans/: 2026-04-26-v1-reward-fix-plan.md
docs/superpowers/specs/: 2026-04-26-v1-reward-fix-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Grid.tsx  Hud.tsx  Icon.tsx  Layout.tsx  LogsPanel.tsx  Sprites.tsx
frontend/src/hooks/: useEpisode.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Play.tsx  Research.tsx
frontend/src/sim/: engine.ts  layout.ts  obsToState.ts  policy.ts  remoteEngine.ts  remoteRunner.ts  rng.ts  runner.ts  types.ts
notebooks/: README.md  eval_colab.ipynb  eval_kaggle.ipynb  eval_v1_kaggle_extend.ipynb  train_colab.ipynb  train_kaggle.ipynb  train_v1_kaggle_extend.ipynb
report/v1/: Makefile  README.md  refs.bib  v1.tex
scripts/: dgx_autorun.sh  gpu_hold.py  gpu_hold.sh
server/: app.py
survivecity_env/: __init__.py  env.py  layout.py  models.py  postmortem.py  prompts.py
tests/: test_survivecity.py
training/: __init__.py  eval.py  inference.py  train.py
v1/notebooks/: README.md  eval_v1_kaggle_extend.ipynb  train_v1_kaggle_extend.ipynb
v1/report/v1/: README.md  refs.bib  v1.tex
v1/scripts/: check_hub_checkpoints.py  dgx_autorun.sh  gpu_hold.py
v1/server/: __init__.py
v1/server/static/: index.html
v1/survivecity_env/: game.py  infection.py  rubric.py
v1/tests/: smoke_test_server.py  test_reward_fixes.py  test_survivecity.py
v1/training/: train.py
v2/: .gitignore  Dockerfile  Dockerfile.dgx  README.md  openenv.yaml  pyproject.toml
v2/notebooks/: train_v2_kaggle.ipynb  train_v2_kaggle_fixed.ipynb
v2/server/: app.py
v2/survivecity_v2_env/: __init__.py  env.py  game.py  infection.py  inventory.py  layout.py  models.py  postmortem.py  prompts.py  rubric.py  spawn.py
v2/tests/: test_v2.py
v2/training/: __init__.py  eval.py  inference.py  simulator.py  train.py
