[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivecity"
version = "1.0.0"
description = "SurviveCity — Multi-Agent Zombie Apocalypse for LLM Failure-Replay Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sirjan Singh"},
    {name = "Eeshan"},
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "transformers>=4.37",
    "trl>=0.7",
    "unsloth",
    "peft>=0.7",
    "bitsandbytes>=0.41",
    "datasets>=2.16",
    "wandb",
    "matplotlib>=3.8",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.4",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["survivecity_env*", "server*", "training*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
