[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivecity-v2"
version = "2.0.0"
description = "SurviveCity v2 — 5-agent multi-resource env with bite transmission, zombie waves, iterated voting, and inventory."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sirjan Singh"},
    {name = "Eeshan Singh"},
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
# Pinned to the exact stack we ran on DGX for v1 (April 2026). See
# Dockerfile.dgx for the full rationale; the short version:
#   - torch 2.5.1 + cu121: last torch with the inductor submodule unsloth_zoo
#     expects + Ampere/Hopper bf16 fast paths.
#   - transformers 4.40.2 + peft 0.10.0 + trl 0.8.6 + datasets 2.19.1 +
#     accelerate 0.30.1: the version set TRL 0.8.x's GRPOTrainer was tested
#     against. Newer TRL (>=0.15) changes API and trips PEFT's __getattr__
#     chain; v1's train.py worked around that with _seed_warnings_issued.
#   - torchao 0.7.0: CRITICAL — newer torchao references torch.int1 which
#     only exists in torch 2.6+. transformers/quantizers/auto.py imports
#     torchao eagerly, so without this pin `import transformers` raises
#     AttributeError on torch 2.5.x. Force this pin AFTER transformers
#     resolves its own dep tree (see Dockerfile.dgx for the --force-reinstall
#     --no-deps invocation).
#   - bitsandbytes >=0.41: 4-bit nf4 path. Skip via `train.py --no-4bit` if
#     you have the VRAM to load the base in bf16 (recommended on 30GB+).
train = [
    "torch==2.5.1",
    "transformers==4.40.2",
    "trl==0.8.6",
    "peft==0.10.0",
    "datasets==2.19.1",
    "accelerate==0.30.1",
    "bitsandbytes>=0.41",
    "torchao==0.7.0",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "huggingface_hub>=0.20",
    "tensorboard",
    "wandb",
]
# Unsloth is OPTIONAL — fast kernels for Ampere+ (A100 / H100). Skip on
# Volta / Turing or when UNSLOTH_DISABLE=1; train.py falls back to the
# transformers + peft path automatically.
unsloth = [
    "unsloth[cu121-torch250] @ git+https://github.com/unslothai/unsloth.git",
]
dev = [
    "pytest>=7.4",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["survivecity_v2_env*", "server*", "training*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
