[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivecity-v2"
version = "2.0.0"
description = "SurviveCity v2 — 5-agent multi-resource env with bite transmission, zombie waves, iterated voting, and inventory."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sirjan Singh"},
    {name = "Eeshan Singh"},
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
# Clean modern stack centered on **trl 0.13.0** — the first TRL with
# GRPOTrainer (Jan 2025) but BEFORE the unconditional judges/mergekit
# imports landed in trl 0.15+. See Dockerfile.dgx for the full history of
# how we landed here (after four cascading dep failures with the v1 stack +
# Unsloth git head).
#
# These versions are mutually compatible and tested by trl 0.13's release CI.
# Don't bump without re-testing the full import chain from train.py.
#
#   - torch 2.5.1+cu121: V100/A100/H100-friendly, has cuDNN built-ins
#   - transformers 4.45.2: trl 0.13 requires >= 4.45
#   - peft 0.13.2: compatible with transformers 4.45+ and trl 0.13
#   - trl 0.13.0: GRPOTrainer present, no judges/mergekit eager imports
#   - bitsandbytes >= 0.43: 4-bit nf4 path (only used without --no-4bit)
#   - torchao: NOT installed (see Dockerfile.dgx for the gory details)
#   - Unsloth: NOT used (its git head pulls bleeding-edge TRL that breaks)
train = [
    "torch==2.5.1",
    "transformers==4.46.3",
    "accelerate==1.1.1",
    "peft==0.13.2",
    "datasets==3.1.0",
    "trl==0.15.2",
    "bitsandbytes>=0.43",
    # trl 0.15+ chain-imports mergekit + llm_blender unconditionally.
    # Without these, `from trl import GRPOTrainer` raises ModuleNotFoundError.
    # We don't actually use merge or judge functionality.
    "mergekit",
    "llm-blender",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "huggingface_hub>=0.20",
    "tensorboard",
    "wandb",
]
# Unsloth's git head pulls bleeding-edge TRL/transformers/peft that break
# in non-obvious ways (see Dockerfile.dgx history). Not recommended for v2.
# If you must use it, install separately and accept the dep risk.
unsloth = [
    "unsloth",
]
dev = [
    "pytest>=7.4",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["survivecity_v2_env*", "server*", "training*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
